use textile instead of markdown

--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h1. billomat-rb
 
-A neat ruby library for interacting with the [RESTful API](http://www.billomat.com/api/) of [billomat](http://www.billomat.com/).
+A neat ruby library for interacting with the "RESTful API":http://www.billomat.com/api/ of "billomat":http://www.billomat.com/.
 
 h2. Requirements
 
