--- a/README.textile
+++ b/README.textile
@@ -5,3 +5,17 @@ A neat ruby library for interacting with the "RESTful API":http://www.billomat.c
 h2. Requirements
 
 billomat-rb requires active_resource and active_support in version 2.3.2 or above.
+
+h2. Note on Patches/Pull Requests
+* Fork the project.
+* Make your feature addition or bug fix.
+* Add tests for it. This is important so I don't break it in a
+  future version unintentionally.
+* Commit, do not mess with rakefile, version, or history.
+  (if you want to have your own version, that is fine but
+   bump version in a commit by itself I can ignore when I pull)
+* Send me a pull request. Bonus points for topic branches.
+
+h2. Copyright
+
+Copyright (c) 2010 Ronald Becher. See LICENSE for details.
