--- a/README.textile
+++ b/README.textile
@@ -18,4 +18,4 @@ h2. Note on Patches/Pull Requests
 
 h2. Copyright
 
-Copyright (c) 2010 Ronald Becher. See LICENSE for details.
+Copyright (c) 2009 - 2014 Ronald Becher. See LICENSE for details.
